--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=technosdev
+spring.profiles.active=test
+spring.jpa.open-in-view=true
+
+# MySQL properties
+spring.datasource.url=jdbc:mysql://localhost:3306/technosdev
+spring.datasource.username=root
+spring.datasource.password=290805
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
